# raytracer

./: .gitignore  CMakeLists.txt  camera.h  hittable.h  hittable_list.h  main.cc  random.h  ray.h  sphere.h
src/: camera.h  config.h.in  dielectric.h  hittable.h  hittable_list.h  lambertian.h  main.cc  material.h  metal.h  random.h  ray.h  sphere.h
